improved support for earlier versions